--- a/scss/components/_bba.scss
+++ b/scss/components/_bba.scss
@@ -2,6 +2,9 @@
    ======================== */
 
 .filter-ally-wrapper {
+  .ally-image-cover + .ally-actions {
+    display: flex;
+  }
   .ally-actions {
     display: inline-flex;
     // feedback gauge for images
@@ -37,7 +40,8 @@
           width: 24px;
           background-color: $block-header;
           // override background change on hover
-          &:hover {
+          &:hover,
+          &:active {
             background-color: $block-header !important;
           }
         }
@@ -47,19 +51,19 @@
     .ally-download {
       display: flex;
       align-items: center;
-      height: 24px;
-      width: 24px;
+      height: auto;
+      width: auto;
       border-radius: 4px;
       background-color: transparent;
       &:hover {
         transform: scale(1.2);
       }
       a {
-        background-color: $block-background;
+        background-color: $block-header;
         background-size: contain;
         background-repeat: no-repeat;
         background-position-y: center;
-        width: 100%;
+        width: 24px;
         height: 24px;
         border-radius: 4px;
         // override transform on hover
