--- a/scss/components/_blockquote.scss
+++ b/scss/components/_blockquote.scss
@@ -2,7 +2,6 @@
    =========================*/
 
 // Rumdoodle v2.2-
-
 div.quote-box {
   @extend %info-box;
   // from common
@@ -54,6 +53,7 @@ figure.blockquote {
     p, li {
       font-family: inherit;
       font-size: inherit;
+      font-weight: 400;
       padding: 0;
       &:not(:last-child) {
         margin-bottom: $component-margin-bottom;
