--- a/scss/layout/_pagelayout.scss
+++ b/scss/layout/_pagelayout.scss
@@ -44,8 +44,13 @@
             &:not(:last-child) {
               margin-bottom: $component-margin-bottom;
             }
-            & > .row:last-child > [class^="col"] > :last-child {
+            & > .row:last-child > [class*="col-sm"] > :last-child {
               margin-bottom: 0 !important;
+            }
+            @media only screen and (min-width: $neo-breakpoint) {
+              & > .row:last-child > [class^="col"] > :last-child {
+                margin-bottom: 0 !important;
+              }
             }
           }
           .row {
