--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -213,8 +213,10 @@ aside {
         margin-bottom: 0.25rem;
         border-radius: 50%;
       }
-      span {
-        display: block;
+      & > span {
+        &:not(.filter-ally-wrapper) {
+          display: block;
+        }
         &.name {
           font-family: "KingsBureauGrot";
           color: $body-text;
